#172 fix: 장소/코스 북마크 로직 수정 및 통합, flyway 스크립트 간소화